
2020-11-24  Franz Holzinger  <franz@ttproducts.de>
    * fix issue from static_info_tables_de: Undo part of latest pullrequest to the former version 10.0 support.

2020-11-18  Franz Holzinger  <franz@ttproducts.de>
    * Important bugfix to the former version 10.0 support.
    * Simplification of the TCA files.

2020-06-24  Davide Alghi
    * feature: add missing currency names

2019-11-27  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 10: Add the file Configuration/Extbase/Persistence/Classes.php.

2019-01-16  André Schließer  <a.schliesser@zeroseven.de>
    * compatibility for TYPO3 9.5

2018-08-07  Franz Holzinger  <franz@ttproducts.de>
    * bugfix: use typo3/cms-core in composer.json
    * use the $tablename variable for the TCA

2018-08-06  Franz Holzinger  <franz@ttproducts.de>
    * adaptions to composer.json

2017-09-16  Franz Holzinger  <franz@ttproducts.de>
    * commit #4: add labels for Suisse country zones

2017-05-16  Franz Holzinger  <franz@ttproducts.de>
    * remove autoload psr-4 for SJBR\StaticInfoTables\ from composer.json

2017-04-10  Franz Holzinger  <franz@ttproducts.de>
    * modify composer.json

2017-03-28  Franz Holzinger  <franz@ttproducts.de>
    * add composer.json

2017-03-11  Franz Holzinger  <franz@ttproducts.de>
    * ready for TYPO3 8.x

2015-10-20  Franz Holzinger  <franz@ttproducts.de>
	* update for static_info_tables 6.3.1 and TYPO3 6.2 and 7.99
	* add documentation

2015-09-02  Franz Holzinger  <franz@ttproducts.de>
	* Add countries: CS, ME RS, JE, GG, IM, MF, BL, BQ, CWS, SX, SS
	* Modify countries: AX
	* Add currencies: VEF, ZMW

2015-08-06  Franz Holzinger  <franz@ttproducts.de>
	* update for static_info_tables 6.2.1 and TYPO3 6.2 and 7.0

2006-12-19  Franz Holzinger  <kontakt@fholzinger.com>
	* enable the function to load additional TCA to allow fields added from the language specific static_info_tables derivates
	* Added a ChangeLog file