@@ -4,22 +4,13 @@ $EM_CONF[$_EXTKEY] = [
     'title' => 'Static Info Tables (it)',
     'description' => 'Italian (it) language pack for the Static Info Tables providing localized names for countries, currencies and so on.',
     'category' => 'misc',
-    'shy' => 0,
-    'version' => '6.7.3',
-    'priority' => '',
-    'loadOrder' => '',
-    'module' => '',
+    'version' => '6.7.4',
     'state' => 'stable',
     'uploadfolder' => 0,
     'createDirs' => '',
-    'modify_tables' => 'static_countries,static_languages,static_currencies,static_territories',
-    'clearcacheonload' => 1,
-    'lockType' => '',
     'author' => 'Franz Holzinger',
     'author_email' => 'franz@ttproducts.de',
     'author_company' => 'jambage.com',
-    'CGLcompliance' => '',
-    'CGLcompliance_note' => '',
     'constraints' => [
         'depends' => [
             'typo3' => '8.7.0-10.99.99',
