@@ -1,3 +1,5 @@
+2021-07-13  Franz Holzinger  <franz@ttproducts.de>
+    * Use the domain jambagecom in the composer.json.
 
 2020-11-24  Franz Holzinger  <franz@ttproducts.de>
     * fix issue from static_info_tables_de: Undo part of latest pullrequest to the former version 10.0 support.
